--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,10 @@
     font-family: 'Grandis Extended';
 }
 
+body{
+    background: #0A4A7F;
+}
+
 .swiper-pagination-bullet {
     background: #fff !important;
     opacity: 0.5 !important;
@@ -33,4 +37,26 @@
     align-items: center;
     justify-content: center;
     bottom: 0;
+}
+
+.banner {
+    position: relative;
+    // background: url(../img/index/banner-bgd.jpg) no-repeat;
+    // background-size: cover;
+    // background-position: center;
+    // height: 500px;
+    
+    img{
+        z-index: -1;
+        
+    }
+    
+    // &-gradient{
+    //     background: linear-gradient(180deg, color(display-p3 0.039 0.039 0.039 / 0) 0%, color(display-p3 0.039 0.290 0.498) 77.56%);
+    //     height: 100%;
+    //     width: 100%;
+    //     position: absolute;
+    //     bottom: 0;
+    //     left: 0;
+    // }
 }
