--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -710,6 +710,34 @@ video {
   }
 }
 
+.block-bottom-point {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 1rem;
+  width: 1rem;
+  border-top-left-radius: 10px;
+  border-width: 12px;
+  border-bottom-width: 0px;
+  border-right-width: 0px;
+  --tw-border-opacity: 1;
+  border-color: rgb(10 74 127 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 74 127 / var(--tw-bg-opacity));
+}
+
+.block-bottom-point::after {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: 0.375rem;
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 45 82 / var(--tw-bg-opacity));
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -852,10 +880,6 @@ video {
   margin-top: 3rem;
 }
 
-.mt-24 {
-  margin-top: 6rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
@@ -874,6 +898,10 @@ video {
 
 .mt-auto {
   margin-top: auto;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
 .line-clamp-2 {
@@ -921,6 +949,10 @@ video {
   height: 18rem;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .h-\[210px\] {
   height: 210px;
 }
@@ -951,8 +983,8 @@ video {
   height: 100vh;
 }
 
-.h-8 {
-  height: 2rem;
+.h-\[500px\] {
+  height: 500px;
 }
 
 .w-10 {
@@ -1118,6 +1150,10 @@ video {
   border-bottom-left-radius: 0.75rem;
 }
 
+.rounded-br-none {
+  border-bottom-right-radius: 0px;
+}
+
 .rounded-tl-xl {
   border-top-left-radius: 0.75rem;
 }
@@ -1147,9 +1183,24 @@ video {
   border-color: rgb(255 255 255 / 0.4);
 }
 
+.border-blue-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(10 74 127 / var(--tw-border-opacity));
+}
+
+.border-blue-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 45 82 / var(--tw-border-opacity));
+}
+
 .bg-\[\#111111\] {
   --tw-bg-opacity: 1;
   background-color: rgb(17 17 17 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 136 236 / var(--tw-bg-opacity));
 }
 
 .bg-blue-500 {
@@ -1160,11 +1211,6 @@ video {
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(0 45 82 / var(--tw-bg-opacity));
-}
-
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 136 236 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\.\.\/img\/index\/banner-bgd\.jpg\'\)\] {
@@ -1196,6 +1242,12 @@ video {
 
 .from-blue-600 {
   --tw-gradient-from: #002D52 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 45 82 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-blue-600\/80 {
+  --tw-gradient-from: rgb(0 45 82 / 0.8) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(0 45 82 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
@@ -1233,6 +1285,11 @@ video {
   padding: 1.75rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1268,14 +1325,9 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pb-14 {
@@ -1310,14 +1362,6 @@ video {
   text-align: center;
 }
 
-.align-baseline {
-  vertical-align: baseline;
-}
-
-.align-text-bottom {
-  vertical-align: text-bottom;
-}
-
 .font-normalidad {
   font-family: Grandis Extended, sans-serif;
 }
@@ -1340,6 +1384,10 @@ video {
   font-size: 30px;
 }
 
+.text-\[45px\] {
+  font-size: 45px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1358,10 +1406,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-\[45px\] {
-  font-size: 45px;
 }
 
 .font-bold {
@@ -1543,6 +1587,16 @@ video {
   background-color: rgb(10 74 127 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:text-blue-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(14 136 236 / var(--tw-text-opacity));
+}
+
 .hover\:opacity-75:hover {
   opacity: 0.75;
 }
@@ -1591,6 +1645,18 @@ video {
     margin-bottom: 1rem;
   }
 
+  .md\:mb-7 {
+    margin-bottom: 1.75rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1607,6 +1673,10 @@ video {
 
   .md\:h-\[300px\] {
     height: 300px;
+  }
+
+  .md\:h-\[600px\] {
+    height: 600px;
   }
 
   .md\:w-14 {
@@ -1639,6 +1709,20 @@ video {
 
   .md\:p-3 {
     padding: 0.75rem;
+  }
+
+  .md\:p-7 {
+    padding: 1.75rem;
+  }
+
+  .md\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .md\:pl-9 {
@@ -1675,6 +1759,21 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .md\:leading-5 {
