--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -820,6 +820,11 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.my-14 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+}
+
 .mb-14 {
   margin-bottom: 3.5rem;
 }
@@ -838,10 +843,6 @@ video {
 
 .mb-5 {
   margin-bottom: 1.25rem;
-}
-
-.mb-7 {
-  margin-bottom: 1.75rem;
 }
 
 .mb-8 {
@@ -880,6 +881,10 @@ video {
   margin-top: 3rem;
 }
 
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -898,10 +903,6 @@ video {
 
 .mt-auto {
   margin-top: auto;
-}
-
-.mt-14 {
-  margin-top: 3.5rem;
 }
 
 .line-clamp-2 {
@@ -961,8 +962,8 @@ video {
   height: 300;
 }
 
-.h-\[600px\] {
-  height: 600px;
+.h-\[500px\] {
+  height: 500px;
 }
 
 .h-\[60px\] {
@@ -981,10 +982,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[500px\] {
-  height: 500px;
 }
 
 .w-10 {
@@ -1029,10 +1026,6 @@ video {
   max-width: 24rem;
 }
 
-.max-w-\[1047px\] {
-  max-width: 1047px;
-}
-
 .max-w-\[508px\] {
   max-width: 508px;
 }
@@ -1045,6 +1038,10 @@ video {
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
+}
+
+.max-w-\[1047px\] {
+  max-width: 1047px;
 }
 
 .border-collapse {
@@ -1174,6 +1171,11 @@ video {
   border-width: 1px;
 }
 
+.border-blue-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 45 82 / var(--tw-border-opacity));
+}
+
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -1181,16 +1183,6 @@ video {
 
 .border-white\/40 {
   border-color: rgb(255 255 255 / 0.4);
-}
-
-.border-blue-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(10 74 127 / var(--tw-border-opacity));
-}
-
-.border-blue-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 45 82 / var(--tw-border-opacity));
 }
 
 .bg-\[\#111111\] {
@@ -1281,10 +1273,6 @@ video {
   padding: 1.25rem;
 }
 
-.p-7 {
-  padding: 1.75rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1298,11 +1286,6 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 
 .px-7 {
@@ -1323,11 +1306,6 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .pb-14 {
@@ -1474,19 +1452,10 @@ video {
           transition-duration: 300ms;
 }
 
-.before\:absolute::before {
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.before\:bottom-0::before {
-  content: var(--tw-content);
-  bottom: 0px;
-}
-
-.before\:right-0::before {
-  content: var(--tw-content);
-  right: 0px;
+.text-content blockquote,
+.text-content b,
+.text-content p {
+  max-width: 1047px;
 }
 
 .before\:mr-2::before {
@@ -1504,19 +1473,9 @@ video {
   display: block;
 }
 
-.before\:h-7::before {
-  content: var(--tw-content);
-  height: 1.75rem;
-}
-
 .before\:h-\[6px\]::before {
   content: var(--tw-content);
   height: 6px;
-}
-
-.before\:w-7::before {
-  content: var(--tw-content);
-  width: 1.75rem;
 }
 
 .before\:w-\[6px\]::before {
@@ -1529,56 +1488,10 @@ video {
   border-radius: 0.125rem;
 }
 
-.before\:rounded-tl-xl::before {
-  content: var(--tw-content);
-  border-top-left-radius: 0.75rem;
-}
-
-.before\:bg-blue-600::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 45 82 / var(--tw-bg-opacity));
-}
-
 .before\:bg-white::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.after\:absolute::after {
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.after\:bottom-0::after {
-  content: var(--tw-content);
-  bottom: 0px;
-}
-
-.after\:right-0::after {
-  content: var(--tw-content);
-  right: 0px;
-}
-
-.after\:z-10::after {
-  content: var(--tw-content);
-  z-index: 10;
-}
-
-.after\:h-4::after {
-  content: var(--tw-content);
-  height: 1rem;
-}
-
-.after\:w-4::after {
-  content: var(--tw-content);
-  width: 1rem;
-}
-
-.after\:rounded-md::after {
-  content: var(--tw-content);
-  border-radius: 0.375rem;
 }
 
 .after\:bg-blue-500::after {
@@ -1695,6 +1608,10 @@ video {
     width: 100%;
   }
 
+  .md\:max-w-\[1200px\] {
+    max-width: 1200px;
+  }
+
   .md\:max-w-\[876px\] {
     max-width: 876px;
   }
@@ -1720,17 +1637,22 @@ video {
     padding-right: 1.25rem;
   }
 
-  .md\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
   .md\:pl-9 {
     padding-left: 2.25rem;
   }
 
   .md\:pt-64 {
     padding-top: 16rem;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .md\:text-5xl {
@@ -1746,6 +1668,11 @@ video {
     font-size: 75px;
   }
 
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -1759,21 +1686,6 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 
   .md\:leading-5 {
