--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -918,6 +918,14 @@ video {
   margin-top: auto;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
+
 .line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -959,6 +967,10 @@ video {
   height: 75%;
 }
 
+.h-52 {
+  height: 13rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -997,16 +1009,8 @@ video {
   height: 100vh;
 }
 
-.h-20 {
-  height: 5rem;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
-.h-52 {
-  height: 13rem;
+.h-\[-webkit-fill-available\] {
+  height: -webkit-fill-available;
 }
 
 .w-10 {
@@ -1067,6 +1071,10 @@ video {
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
+}
+
+.max-w-64 {
+  max-width: 16rem;
 }
 
 .flex-none {
@@ -1217,12 +1225,12 @@ video {
   border-width: 1px;
 }
 
-.border-r {
-  border-right-width: 1px;
-}
-
 .border-b {
   border-bottom-width: 1px;
+}
+
+.border-r {
+  border-right-width: 1px;
 }
 
 .border-blue-600 {
@@ -1293,6 +1301,14 @@ video {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
+.bg-\[url\(\'\.\.\/img\/index\/slide-bgd-1\.jpg\'\)\] {
+  background-image: url('../img/index/slide-bgd-1.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/index\/slide-bgd-2\.jpg\'\)\] {
+  background-image: url('../img/index/slide-bgd-2.jpg');
+}
+
 .from-blue-500 {
   --tw-gradient-from: #0A4A7F var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(10 74 127 / 0) var(--tw-gradient-to-position);
@@ -1315,32 +1331,12 @@ video {
   --tw-gradient-from-position: 20%;
 }
 
-.from-80\% {
-  --tw-gradient-from-position: 80%;
-}
-
-.from-10\% {
-  --tw-gradient-from-position: 10%;
-}
-
-.from-50\% {
-  --tw-gradient-from-position: 50%;
-}
-
 .from-30\% {
   --tw-gradient-from-position: 30%;
 }
 
-.from-90\% {
-  --tw-gradient-from-position: 90%;
-}
-
-.from-100\% {
-  --tw-gradient-from-position: 100%;
-}
-
-.from-40\% {
-  --tw-gradient-from-position: 40%;
+.from-80\% {
+  --tw-gradient-from-position: 80%;
 }
 
 .bg-cover {
@@ -1441,6 +1437,22 @@ video {
   padding-top: 10rem;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1505,10 +1517,6 @@ video {
 
 .leading-9 {
   line-height: 2.25rem;
-}
-
-.leading-3 {
-  line-height: .75rem;
 }
 
 .text-blue-500 {
@@ -1695,6 +1703,30 @@ video {
     margin-top: 0px;
   }
 
+  .md\:ml-10 {
+    margin-left: 2.5rem;
+  }
+
+  .md\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .md\:mb-28 {
+    margin-bottom: 7rem;
+  }
+
+  .md\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .md\:mb-52 {
+    margin-bottom: 13rem;
+  }
+
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1749,12 +1781,40 @@ video {
     max-width: 876px;
   }
 
+  .md\:max-w-\[825px\] {
+    max-width: 825px;
+  }
+
+  .md\:max-w-72 {
+    max-width: 18rem;
+  }
+
+  .md\:max-w-\[416\] {
+    max-width: 416;
+  }
+
+  .md\:max-w-\[416px\] {
+    max-width: 416px;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:gap-y-12 {
     row-gap: 3rem;
+  }
+
+  .md\:border-r {
+    border-right-width: 1px;
+  }
+
+  .md\:border-l {
+    border-left-width: 1px;
+  }
+
+  .md\:border-whiteOp-300 {
+    border-color: #FFFFFF33;
   }
 
   .md\:p-3 {
@@ -1775,12 +1835,25 @@ video {
     padding-right: 1.25rem;
   }
 
+  .md\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+
   .md\:pl-9 {
     padding-left: 2.25rem;
   }
 
   .md\:pt-64 {
     padding-top: 16rem;
+  }
+
+  .md\:pl-5 {
+    padding-left: 1.25rem;
+  }
+
+  .md\:text-center {
+    text-align: center;
   }
 
   .md\:text-2xl {
@@ -1824,6 +1897,16 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .md\:leading-5 {
